@@ -1,0 +1,3 @@
+MD5 a7d382827c334d8a998707e0927a02bb patch-2.6.8-rc2.bz2 3147924
+MD5 a74671ea68b0e3c609e8785ed8497c14 linux-2.6.7.tar.bz2 35092228
+MD5 080a72f68796792a4e04fae15cfc8bbe 2.6.8-rc2-love2.bz2 908651
