@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/cdfs
 # Copyright 2004 Christian Gmeiner; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/sys-kernel/love-sources/ChangeLog,v 1.3 2004/07/19 21:56:46 austriancoder Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/sys-kernel/love-sources/ChangeLog,v 1.4 2004/07/22 22:13:56 austriancoder Exp $
+
+*love-sources-2.6.8_rc2-r2.ebuild (23 July 2004)
+
+  23 July 2004; Christian Gmeiner <christian at visual-page dot de>
+  version bump
 
 *love-sources-2.6.8_rc2-r1.ebuild (19 July 2004)
 
